-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b08
```
* For target hotspot_variant-minimal_libjvm_objs_abstractInterpreter.o:
In file included from /Users/fool/workspace/open/jdk/src/hotspot/share/interpreter/abstractInterpreter.cpp:37:
/Users/fool/workspace/open/jdk/src/hotspot/share/memory/metaspaceShared.hpp:363:66: error: unknown type name 'DumpRegion'; did you mean 'MemRegion'?
static void write_region(FileMapInfo* mapinfo, int region_idx, DumpRegion* dump_region,
^~~~~~~~~~
MemRegion
/Users/fool/workspace/open/jdk/src/hotspot/share/memory/memRegion.hpp:43:7: note: 'MemRegion' declared here
class MemRegion {
^
1 error generated.
```
It might be fixed by
```
diff -r 36218eab4255 src/hotspot/share/memory/metaspaceShared.hpp
--- a/src/hotspot/share/memory/metaspaceShared.hpp Wed Jan 22 20:07:49 2020 -0500
+++ b/src/hotspot/share/memory/metaspaceShared.hpp Thu Jan 23 09:44:46 2020 +0800
@@ -360,8 +360,10 @@
static void write_core_archive_regions(FileMapInfo* mapinfo);
private:
+#if INCLUDE_CDS
static void write_region(FileMapInfo* mapinfo, int region_idx, DumpRegion* dump_region,
bool read_only, bool allow_exec);
+#endif
static void read_extra_data(const char* filename, TRAPS) NOT_CDS_RETURN;
static FileMapInfo* open_static_archive();
static FileMapInfo* open_dynamic_archive();
```
* For target hotspot_variant-minimal_libjvm_objs_abstractInterpreter.o:
In file included from /Users/fool/workspace/open/jdk/src/hotspot/share/interpreter/abstractInterpreter.cpp:37:
/Users/fool/workspace/open/jdk/src/hotspot/share/memory/metaspaceShared.hpp:363:66: error: unknown type name 'DumpRegion'; did you mean 'MemRegion'?
static void write_region(FileMapInfo* mapinfo, int region_idx, DumpRegion* dump_region,
^~~~~~~~~~
MemRegion
/Users/fool/workspace/open/jdk/src/hotspot/share/memory/memRegion.hpp:43:7: note: 'MemRegion' declared here
class MemRegion {
^
1 error generated.
```
It might be fixed by
```
diff -r 36218eab4255 src/hotspot/share/memory/metaspaceShared.hpp
--- a/src/hotspot/share/memory/metaspaceShared.hpp Wed Jan 22 20:07:49 2020 -0500
+++ b/src/hotspot/share/memory/metaspaceShared.hpp Thu Jan 23 09:44:46 2020 +0800
@@ -360,8 +360,10 @@
static void write_core_archive_regions(FileMapInfo* mapinfo);
private:
+#if INCLUDE_CDS
static void write_region(FileMapInfo* mapinfo, int region_idx, DumpRegion* dump_region,
bool read_only, bool allow_exec);
+#endif
static void read_extra_data(const char* filename, TRAPS) NOT_CDS_RETURN;
static FileMapInfo* open_static_archive();
static FileMapInfo* open_dynamic_archive();
```
- relates to
-
JDK-8236236 Eliminate CDS md region and consolidate c++ vtable patching code
-
- Resolved
-