8237752: Minimal VM build fails after JDK-8236236

Reviewed-by: dholmes